<?xml version="1.0"?>
<package format="3">
  <name>robot_tcp</name>
  <version>0.1.0</version>
  <description>A ROS 2 node for controlling Unitree B2W robot using SDK2.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>