<?xml version="1.0"?>
<package format="3">
  <name>b2w_navigation_controller</name>
  <version>0.1.0</version>
  <description>A ROS 2 node for controlling Unitree B2W robot using SDK2.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>z1_arm_controller_cpp</depend>
  <depend>spray_path_planner</depend>
  <depend>tf2_geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>