<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs485_node</name>
  <version>0.0.1</version>
  <description>控制 Modbus 继电器的 ROS 2 节点</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>